fix: fix visible-xs

--- a/module3/css/styles.css
+++ b/module3/css/styles.css
@@ -26,14 +26,17 @@ li {
 
 /********** Large devices only **********/
 @media (min-width: 1200px) {
+  .visible-xs { display: none; }
 }
 
 /********** Medium devices only **********/
 @media (min-width: 992px) and (max-width: 1199px) {
+  .visible-xs { display: none; }
 }
 
 /********** Small devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
+  .visible-xs { display: none; }
 }
 
 /********** Extra small devices only **********/
